fixed error in app.js, amended view4.html to get bootstrap collapse working, changed spacing between audio + video clips in view3.html.

--- a/app/app.css
+++ b/app/app.css
@@ -222,3 +222,33 @@ a.panel-heading {
     content:"\e080";
   }
 }
+.panel {
+  margin-bottom: 0;
+  background-color: transparent;
+  border: none;
+  border-radius: 0;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+.audio controls{
+border-width: 0 1px 1px 1px !important;
+}
+.img-responsive {
+        padding: 0;
+        margin: 0;
+        list-style: none;
+        display: -webkit-box;
+        display: -moz-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        display: flex;
+        float: left;
+        width: 1000px;
+        flex-direction: column;
+        text-align: left;
+        flex-flow: row wrap;
+        align-items: left;
+        justify-content: space-around;
+        align-content: space-around;
+        border: 1px solid #ddd !important;
+}
